src/objects/vlocity_ins__Assessment__c.object
<CustomObject>
    <description>Represents an assessment of an individual, customer or other entity at a given point in time. Also represents the assessment templates that contain the questions and possible pre-defined answers available.</description>
    <fields>
        <fullName>vlocity_ins__AssessmentDate__c</fullName>
        <label>Date Initiated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssessmentTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The type of Assessment being performed is selected when an assessment is initiated.</inlineHelpText>
        <label>Assessment Template</label>
        <referenceTo>vlocity_ins__Assessment__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CompletedDate__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DateFormat__c</fullName>
        <defaultValue>&quot;MM/dd/yyyy&quot;</defaultValue>
        <label>Date Format</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsTemplate__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check the box only when creating Assessment Templates.</inlineHelpText>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectId__c</fullName>
        <label>Object Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryObjectHeader__c</fullName>
        <label>Primary Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryObjectType__c</fullName>
        <label>Primary Object Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecondObjectId__c</fullName>
        <label>Second Object Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecondaryObjectHeader__c</fullName>
        <label>Secondary Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecondaryObjectType__c</fullName>
        <label>Secondary Object Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalScore__c</fullName>
        <inlineHelpText>This is calculated based on the values of the responses to all scorable Questions in the Assessment.</inlineHelpText>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__Type__c</columns>
        <columns>vlocity_ins__IsTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__AllAssessmentTemplates</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_ins__IsTemplate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Assessment Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>